--- a/Admin Panel/sass/_colors.scss
+++ b/Admin Panel/sass/_colors.scss
@@ -2,5 +2,6 @@ $page-background:#F0F7F7;
 $green: #009199;
 $green-light: #2CBF88;
 $green-dark: #005A66;
+$red:#de4b4b;
 $white:#ffffff;
 $black: #000000;
