--- a/Admin Panel/sass/style.scss
+++ b/Admin Panel/sass/style.scss
@@ -65,18 +65,7 @@ body {
 
     }
 
-    .btn {
-      background-color: $green-light;
-      border: 0;
-      color: $white;
-      font-size: 18px;
-      font-weight: 900;
-      transition: background-color .6s ease-in-out;
 
-      &:hover {
-        background-color: $green-dark;
-      }
-    }
   }
 
   &__logo {
@@ -91,12 +80,8 @@ body {
 //        End  Login
 ///////////////////////////////////////////////
 
-.main-container {
-  display: flex;
-  min-height: 100vh;
-  position: relative;
 
-
+.footer-background {
   &:before {
     content: "";
     display: block;
@@ -113,10 +98,36 @@ body {
   }
 }
 
+.main-container {
+  display: flex;
+  min-height: 100vh;
+  position: relative;
+}
+
 
 ////////////////////////////////////////////////
 //       Start   Main nav
 ///////////////////////////////////////////////
+.btn {
+  // background-color: $green-light;
+
+  color: $white;
+  font-size: 18px;
+  font-weight: 700;
+  transition: background-color .6s ease-in-out;
+
+  &-primary {
+    height: 60px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border: 0;
+    background-color: $green-light !important;
+  }
+
+  &:hover {
+    background-color: $green-dark;
+  }
+}
 
 .main-nav {
   min-height: 100vh;
@@ -1028,7 +1039,7 @@ body {
 
 }
 
-/* The container */
+/* Custom Checkbox */
 .form-check-label {
   display: block;
   position: relative;
@@ -1091,6 +1102,140 @@ body {
       -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
       transform: rotate(45deg);
+    }
+  }
+}
+
+
+.modal-backdrop {
+  background-color: $green-dark;
+}
+
+.modal {
+  &-content {
+    @extend .shadow;
+  }
+
+  &-header {
+    position: relative;
+    border-bottom: 0;
+    padding-bottom: 0;
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+
+      span {
+        font-size: 34px;
+        font-weight: 200;
+      }
+
+    }
+
+    .modal-title {
+      width: 100%;
+      text-align: center;
+      font-family: $font;
+      font-weight: 700;
+      font-size: 36px;
+      padding-top: 30px;
+      line-height: 100%;
+
+      @media (max-width:1024px) {
+        font-size: 26px;
+      }
+    }
+  }
+
+  &-body {
+    padding-left: 60px;
+    padding-right: 60px;
+
+    @media (max-width:1024px) {
+      padding-left: 24px;
+      padding-right: 24px;
+    }
+
+    .btn-primary {
+      text-transform: uppercase;
+    }
+  }
+
+  &-footer {
+    padding-top: 0;
+    border-top: 0;
+    justify-content: center;
+
+    .btn {
+      font-family: $font;
+      font-weight: 700;
+      color: $black;
+      text-decoration: underline;
+    }
+  }
+}
+
+.form-group {
+  margin-bottom: 0;
+  padding-top: 10px;
+
+  label {
+    font-size: 14px;
+    font-family: $font;
+    color: $black;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+  }
+
+  .form-control {
+    border-color: #F2F2F2;
+    background-color: #F2F2F2;
+    font-size: 18px;
+    color: $black;
+    border-radius: 5px;
+    outline: none !important;
+
+    &::placeholder {
+      color: $black;
+    }
+  }
+
+  input,
+  select {
+    height: 60px !important;
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+
+  &.has-content {
+    label {
+      opacity: 1;
+    }
+
+    .form-control {
+      background-color: $white;
+      border-color: #ccc;
+    }
+  }
+
+  &.is-valid {
+    label {
+      color: $green-light;
+    }
+
+    .form-control {
+      border-color: $green-light;
+    }
+  }
+
+  &.is-invalid {
+    label {
+      color: $red;
+    }
+
+    .form-control {
+      border-color: $red;
     }
   }
 }
